添加了排序算法，mysql 中 CHAR 和 VARCHAR 的区别。

--- a/面试总结.md
+++ b/面试总结.md
@@ -1,13 +1,152 @@
 # 面试题总结
 
-## clasmethod 和 staticmethod
+## python 相关
 
-## __new__ 和 __init__ 
+### clasmethod 和 staticmethod
 
-## 排序算法
+### \__new__ 和 \_\_init__ 
 
-## mysql char 和 varchar 区别
-CHAR列的长度固定为创建 table 时声明的长度。长度可以是 0 到 255 之间的任何值。  
-VARCHAR列中的值是可变长度的字符串。长度可以指定为 0 到 65535 之间的值。 VARCHAR的有效最大长度取决于最大行大小(65535 字节，在所有列之间共享)和所使用的字符集。
+### 排序算法
 
-## 
+#### 选择排序
+
+首先在未排序序列中找到最小（大）元素，存放到排序序列的起始位置，然后，再从剩余未排序元素中继续寻找最小（大）元素，然后放到已排序序列的末尾。以此类推，直到所有元素均排序完毕。时间复杂度为 O(n2)
+
+代码实现
+
+```python
+>>> def choice_sort(li):
+...     n = len(li)
+...     for i in range(n):
+...             min_index = i
+...             for j in range(i+1, n):
+...                     if li[j] < li[min_index]:
+...                             min_index = j
+...             li[i], li[min_index] = li[min_index], li[i]
+```
+
+#### 插入排序
+
+通过构建有序序列，对于未排序数据，在已排序序列中从后向前扫描，找到相应位置并插入。
+
+代码实现
+
+```python
+def insert_sort(li):
+    n = len(li)
+    for i in range(1,n):
+        pos = li[i]
+        pre = i-1
+        while pre >=0 and li[pre] > pos:
+            li[pre + 1] = li[pre]
+            pre -= 1
+        li[pre + 1] = pos
+```
+
+#### 合并排序
+
+分而治之。
+
+(1) 连续分割未排序的列表，直到有N个子列表，其中每个子列表都有1个“未排序”的元素，N是原始数组中的元素数。
+
+(2) 反复合并，即一次将两个子列表合并在一起，生成新的已排序子列表，直到所有元素都完全合并到一个已排序的数组中。
+
+代码实现
+
+```python
+def merge(left, right):
+    res = []
+    l = r = 0
+    while l < len(left) and r < len(right):
+        if left[l] < right[r]:
+            res.append(left[l])
+            l += 1
+        else:
+            res.append(right[r])
+            r += 1
+    res += (left[l:] + right[r:])
+    return res
+
+
+def merge_sort(li):
+    n = len(li)
+    if n <= 1:
+        return li
+    mid = n // 2
+    left = merge_sort(li[0: mid])
+    right = merge_sort(li[mid: n])
+    return merge(left, right)
+
+```
+
+#### 快速排序
+
+也是一种分而治之的思想，把一个序列（list）分为较小和较大的2个子序列，然后递归地排序两个子序列。
+
+(1) 首先从数组中选择一个元素，称之为pivot。
+
+(2) 将小于轴的所有元素移到轴的左侧;将大于轴的所有元素移到轴的右侧。这称为分区操作。
+
+(3) 递归地将上述2个步骤分别应用于元素的每个子数组，这些元素的值比上一个轴的值小或大。
+
+代码实现：
+
+```python
+def quick_sort(li, left, right):
+    if left >= right:
+        return li
+    begin = li[left]
+    low = left
+    high = right
+    while left < right:
+        while left < right and li[right] > begin:
+            right -= 1
+        li[left] = li[right]
+        while left < right and li[left] < begin:
+            left += 1
+        li[right] = li[left]
+    li[left] = begin
+    quick_sort(li, low, left)
+    quick_sort(li, left+1, high)
+    return li
+
+
+def start(li):
+    quick_sort(li, 0, len(li)-1)
+```
+
+
+
+## mysql 数据库
+
+参考：https://www.docs4dev.com/docs/zh/mysql/5.7/reference/char.html
+
+### char 和 varchar 区别
+
+存储和检索方式不同。它们的最大长度以及是否保留尾随空格也不同。
+
+CHAR 类型的长度固定为声明时指定的长度，长度不足时会使用空格右填充，检索时删除空格。长度为`0-255`。
+
+VARCHAR 类型为变长长度，长度可以指定为`0-65535`。`VARCHAR`值在存储时不会填充。存储和检索值时会保留尾随空格。存储时存储为 1 字节或 2 字节长的前缀加数据，因此它实际占用的存储是数据加上前缀。长度前缀指示值中的字节数。如果值要求不超过 255 个字节，则一列使用一个长度字节；如果值可能需要不超过 255 个字节，则一列使用两个长度字节。
+
+```
+mysql> desc vc;
++-------+------------+------+-----+---------+-------+
+| Field | Type       | Null | Key | Default | Extra |
++-------+------------+------+-----+---------+-------+
+| v     | varchar(4) | YES  |     | NULL    |       |
+| c     | char(4)    | YES  |     | NULL    |       |
++-------+------------+------+-----+---------+-------+
+mysql> insert vc value ('ab  ','ab  ');
+mysql> select length(v),length(c) from vc;
++-----------+-----------+
+| length(v) | length(c) |
++-----------+-----------+
+|         4 |         2 |
++-----------+-----------+
+```
+
+CHAR 在检索时，会删除尾随空格。
+
+
+
